# capstone_14

./: .gitignore  README.md
docs/: J_telemetry_protocol.md  P_jetson_sender_contract.md  c_motor_logic_summary_ko.md  code_overview_ko.md  demo_audio_direction_model_test_commands.md  demo_runbook_ko.md  laser_motor_logic_summary_ko.md  laser_motor_plan.md  professor_summary.md  system_overview_ko.md
jetson/: jetson_node.py
jetson/src/: audio_fallback.py  config.py  distance_model.py
jetson/src/control/: ultra_yubin_motor.py
jetson/src/ui/: display.py
jetson/src/utils/: jetson_sender.py
models/: README.md
raspberry_pi/: README.md  pyproject.toml  run_dashboard.sh  run_drone.sh
raspberry_pi/docs/: dashboard_reference.md
raspberry_pi/scenarios/: 1.json  2.json  3.json  4.json  README.md  infinity.json
raspberry_pi/src/tello_control/: __init__.py  cli.py  controller.py  dashboard.py  dry_run.py  keys.py  logger.py  network_profiles.py  pilot_ui.py  rc_control.py  safety.py  scenario.py  telemetry_model.py  telemetry_receiver.py  telemetry_store.py  visualization.py
raspberry_pi/src/tello_control/web/: app.js  index.html  style.css
raspberry_pi/tests/: test_controller.py  test_pilot_ui.py  test_scenario.py  test_telemetry.py
scripts/: run_demo_pl_drive.sh
ultra96/pl_goal_compute/ps_app/: pl_udp_usb_dxl_bridge.c
