[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tello-control"
version = "0.1.0"
description = "Conservative keyboard control CLI for DJI Tello drones."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djitellopy>=2.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tello-control = "tello_control.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tello_control = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
